@@ -15,9 +15,9 @@
 package service
 
 import (
+	"errors"
 	"testing"
 
-	"github.com/pkg/errors"
 	"gotest.tools/assert"
 	corev1 "k8s.io/api/core/v1"
 	"k8s.io/apimachinery/pkg/runtime"
