@@ -16,6 +16,10 @@
 |===
 | | Description | PR
 
+| 🐣
+| Replaced non-standard errors package with standard library functions
+| https://github.com/knative/client/pull/853[#853]
+
 | 🐛
 | Fix Panic for kn source ping describe with Sink URI
 | https://github.com/knative/client/pull/848[#848]
